# nexmem

./: .dockerignore  .env.example  .gitignore  7day_roadmap_ai_memory_layer.md  BACKEND_HARDENING_PHASE2.md  BACKEND_HARDENING_PHASE3_PLUS.md  BACKEND_HARDENING_PLAN.md  BACKEND_RISKS.md  CONTRIBUTING.md  CURRENT_STATUS.md  CURRENT_STATUS_MAIN.md  DEPENDENCY_CVE_STATUS.md  DEPLOY.md  Dockerfile  FINAL_MERGE_REPORT.md  HISTORY_REWRITE_COMPLETE.md  KIROWORKLOG.md  KIRO_SESSION_BOOTSTRAP.md  KIRO_WORK_LOG.md  MERGE_READY.md  MERGE_SEQUENCE_RUNBOOK.md  MONITORING_GAP_REPORT.md  PRIVATE_BETA_CHECKLIST.md  PRODUCTION_READINESS_PLAN.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  README.md  README_DEPLOY.md  REPO_STATE_AUDIT.md  SECURITY.md  alembic.ini  apply_migrations_supabase.sql  build_page.py  deploy.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pytest.ini  render.yaml  requirements-dev.txt  (+5 more)
.github/workflows/: ci.yml  codeql.yml  deploy-frontend.yml
alembic/: env.py
alembic/versions/: 001_baseline.py  002_hnsw_index.py  003_add_consolidated_at.py  004_add_fts_columns.py  005_add_app_id_procedural.py  006_align_app_scoping.py  007_standardize_vector_dim.py  008_enable_memory_rls.py  009_engram_hnsw_index.py  010_token_usage.py  011_fk_cascade_content_limits.py  012_add_app_id_to_engrams.py  012_auth_tables_rls.py  012_refresh_tokens.py  013_extend_rls.py  (+14 more)
app/: celery_app.py  config.py  database.py  demo_db.py  main.py  tasks.py
docs/: API_VERSIONING.md  APP_SCOPING.md  DATA_RETENTION.md  INCIDENT_RUNBOOK.md  SECRET_INCIDENT_RUNBOOK.md  SLO.md
examples/: README.md  javascript_quickstart.mjs  python_quickstart.py
frontend/: .env.example  App.tsx  Dockerfile  app.py  requirements.txt
nexmem-js/: .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
nexmem-landing/: package-lock.json  package.json  vercel.json
nexmem-mcp/: README.md  pyproject.toml  server.py
nexmem-mcp/tests/: conftest.py  test_input_validation.py  test_retry_policy.py
nexmem-mcp/tools/: __init__.py  recall.py  remember.py  search.py  set_profile.py
nexmem-py/: .gitignore  README.md  pyproject.toml
nexmem-py/nexmem/: __init__.py  client.py  exceptions.py  models.py  sync_client.py
nexmem-py/tests/: test_client.py
scripts/: __init__.py  apply_migrations.py  check_health.py  clear_keys.py  demo_walkthrough.py  dlq_admin.py  download_spacy_model.py  lint_migrations.py  migrate_to_uuid.py  nexmem_admin.py  run_migrations.py  run_with_migrations.sh  scan_secrets.py  seed_demo.py
tests/: conftest.py  locustfile.py  run_security_audit.py  test_admin_cli.py  test_admin_endpoints.py  test_alembic_env.py  test_app_scope_consistency.py  test_app_scoping.py  test_app_startup_safety.py  test_app_suspension.py  test_app_usage.py  test_audit_log.py  test_auth.py  test_auth_table_rls_migration.py  test_celery_health_probe.py  test_celery_task_logging.py  test_cicd_secrets.py  test_circuit_breaker.py  test_concurrency.py  test_concurrent_writes.py  test_config_safety.py  test_config_security.py  test_config_validate.py  test_data_retention.py  test_database_rls.py  test_dlq_admin_cli.py  test_engram_processor.py  test_episode_write_atomicity.py  test_frontend_auth.py  test_gdpr_hardening.py  test_gdpr_soft_delete.py  test_graceful_shutdown.py  test_isolation_and_write.py  test_json_shape_guard.py  test_lazy_loaders.py  test_llm_service.py  test_lockout_escalation.py  test_locustfile_targets_real_routes.py  test_logging_redaction.py  test_memory.py  (+27 more)
(+85 files in other folders)
