[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "nexmem-mcp"
version = "0.1.0"
description = "MCP server for NexMem long-term memory tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "NexMem" }
]
dependencies = [
  "httpx>=0.27,<1",
  "mcp>=1.0,<2",
  "tenacity>=8.3,<9",
]

[project.scripts]
nexmem-mcp = "server:main"
mnemo-mcp = "server:main"

[tool.hatch.build.targets.wheel]
py-modules = ["server"]
packages = ["tools"]

[tool.hatch.build.targets.sdist]
include = [
  "server.py",
  "tools",
  "README.md",
  "pyproject.toml",
]
