[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "nexmem-py"
version = "0.1.0"
description = "Python SDK for the NexMem memory API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "NexMem" }
]
keywords = ["memory", "llm", "ai", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "twine>=5",
]

[project.urls]
Homepage = "https://github.com/nexmem/nexmem-py"
Repository = "https://github.com/nexmem/nexmem-py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["nexmem"]

[tool.hatch.build.targets.sdist]
include = [
  "nexmem",
  "tests",
  "README.md",
  "pyproject.toml",
]
